--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-03-30 13:12+0200\n"
+"POT-Creation-Date: 2022-03-31 09:55+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -18,10 +18,114 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
+#: .\adverts\forms.py:23
+msgid "Service type"
+msgstr "Tipo de servicio"
+
+#: .\adverts\forms.py:24
+msgid "Property type"
+msgstr "Tipo de propiedad"
+
+#: .\adverts\forms.py:25
+msgid "Surface"
+msgstr "Superficie"
+
+#: .\adverts\forms.py:26
+msgid "Number of rooms"
+msgstr "Número de habitaciones"
+
+#: .\adverts\forms.py:27
+msgid "Number of bedrooms"
+msgstr "Número de dormitorios"
+
+#: .\adverts\forms.py:28
+msgid "Is furnished"
+msgstr "Está amueblado"
+
+#: .\adverts\forms.py:29
+msgid "Has a balcony"
+msgstr "Tiene un balcón"
+
+#: .\adverts\forms.py:30
+msgid "Has a terrace"
+msgstr "Tiene una terraza"
+
+#: .\adverts\forms.py:31
+msgid "Has an elevator"
+msgstr "Tiene un ascensor"
+
+#: .\adverts\forms.py:32
+msgid "Has a parking lot"
+msgstr "Tiene un aparcamiento"
+
+#: .\adverts\forms.py:33 .\adverts\templates\adverts\details-advert.html:109
+msgid "Description"
+msgstr "Descripción"
+
+#: .\adverts\forms.py:34
+msgid "Price"
+msgstr "Precio"
+
+#: .\adverts\forms.py:35
+msgid "Deposit of guarantee"
+msgstr "Depósito de garantía"
+
+#: .\adverts\forms.py:36
+msgid "Energy consumption"
+msgstr "Consumo de energía"
+
+#: .\adverts\forms.py:37
+msgid "Greenhouse gas emissions"
+msgstr "Emisiones de gases de efecto invernadero"
+
+msgid "Street number"
+msgstr "Número de la calle"
+
+#: .\adverts\forms.py:40
+msgid "Street name"
+msgstr "Nombre de la calle"
+
+#: .\adverts\forms.py:41 .\adverts\forms.py:89
+msgid "Zip code"
+msgstr ""
+
+#: .\adverts\forms.py:42
+msgid "City"
+msgstr "Ciudad"
+
+#: .\adverts\forms.py:43
+msgid "Status of the advert"
+msgstr "Situación del anuncio"
+
+
+#: .\adverts\forms.py:44
+msgid "Pictures"
+msgstr "Fotos"
+
+#: .\adverts\forms.py:68 .\adverts\forms.py:107
+msgid "Username"
+msgstr "Nombre de usuario"
+
+#: .\adverts\forms.py:69 .\adverts\forms.py:108
+msgid "E-mail address"
+msgstr "Correo electrónico"
+
+#: .\adverts\forms.py:70
+msgid "Password"
+msgstr "Contraseña"
+
+#: .\adverts\forms.py:71
+msgid "Confirm password"
+msgstr "Confirmar contraseña"
+
+#: .\adverts\forms.py:88 .\adverts\templates\adverts\details-advert.html:90
+msgid "Phone number"
+msgstr "Número de teléfono"
+
 #: .\adverts\templates\adverts\account.html:7
 #: .\adverts\templates\adverts\account.html:48
 #: .\adverts\templates\adverts\update_account.html:5
-#: .\adverts\templates\includes\navigation.html:41
+#: .\adverts\templates\includes\navigation.html:62
 msgid "Profile"
 msgstr "Perfil"
 
@@ -110,7 +214,8 @@ msgstr "Añadir a favoritos"
 #: .\adverts\templates\includes\other-properties.html:41
 #, python-format
 msgid "%(room_c)s room(s) - %(bedroom_c)s bedroom(s) - %(surface)sm²"
-msgstr "%(room_c)s habitación(es) - %(bedroom_c)s dormitorio(s) - %(surface)sm²"
+msgstr ""
+"%(room_c)s habitación(es) - %(bedroom_c)s dormitorio(s) - %(surface)sm²"
 
 #: .\adverts\templates\adverts\account.html:124
 #: .\adverts\templates\adverts\details-advert.html:102
@@ -222,14 +327,6 @@ msgstr "Propietario"
 #: .\adverts\templates\adverts\details-advert.html:88
 msgid "Mail"
 msgstr "Correo"
-
-#: .\adverts\templates\adverts\details-advert.html:90
-msgid "Phone number"
-msgstr "Número de teléfono"
-
-#: .\adverts\templates\adverts\details-advert.html:109
-msgid "Description"
-msgstr "Descripción"
 
 #: .\adverts\templates\adverts\details-advert.html:113
 msgid "Energy use"
@@ -361,15 +458,15 @@ msgstr "¿Está seguro de que desea eliminar este anuncio?"
 msgid "All rights reserved"
 msgstr "Todos los derechos reservados"
 
-#: .\adverts\templates\includes\navigation.html:29
+#: .\adverts\templates\includes\navigation.html:50
 msgid "Post an advert"
 msgstr "Publicar un anuncio"
 
-#: .\adverts\templates\includes\navigation.html:32
+#: .\adverts\templates\includes\navigation.html:53
 msgid "Browse the adverts"
 msgstr "Navegar por los anuncios"
 
-#: .\adverts\templates\includes\navigation.html:38
+#: .\adverts\templates\includes\navigation.html:59
 msgid "Favorites"
 msgstr "Favoritos"
 
@@ -377,14 +474,14 @@ msgstr "Favoritos"
 msgid "Affiliate adverts"
 msgstr "Anuncios de afiliados"
 
-#: .\project\settings.py:135
+#: .\project\settings.py:164
 msgid "English"
 msgstr "Inglés"
 
-#: .\project\settings.py:136
+#: .\project\settings.py:165
 msgid "French"
 msgstr "Francés"
 
-#: .\project\settings.py:137
+#: .\project\settings.py:166
 msgid "Spanish"
 msgstr "Español"
