--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -267,6 +267,10 @@ msgstr "View the advert"
 msgid "Change my password"
 msgstr "Change my password"
 
+#: .\adverts\templates\adverts\change-password.html:40
+msgid "Update my password"
+msgstr "Update my password"
+
 #: .\adverts\templates\adverts\change-password.html:17
 #: .\adverts\templates\adverts\update_account.html:20
 #: .\adverts\templates\adverts\update_advert_form.html:14
@@ -436,6 +440,14 @@ msgstr "log on"
 msgid "Editing of the profile"
 msgstr "Editing of the profile"
 
+#: .\adverts\templates\adverts\update_account.html:6
+msgid "Edit profile"
+msgstr "Edit profile"
+
+#: .\adverts\templates\adverts\update_account.html:55
+msgid "Update my profile"
+msgstr "Update my profile"
+
 #: .\adverts\templates\adverts\update_account.html:17
 msgid "Change your password"
 msgstr "Change your password"
@@ -443,6 +455,10 @@ msgstr "Change your password"
 #: .\adverts\templates\adverts\update_advert_form.html:5
 msgid "Edit an advert"
 msgstr "Edit an advert"
+
+#: .\adverts\templates\adverts\update_advert_form.html:98
+msgid "Update the advert"
+msgstr "Update the advert"
 
 #: .\adverts\templates\includes\confirm_modal.html:7
 msgid "Delete the advert"
