fix translations on filters

--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-04-01 00:05+0200\n"
+"POT-Creation-Date: 2022-04-01 09:36+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -18,7 +18,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-#: .\adverts\forms.py:23
+#: .\adverts\forms.py:23 .\adverts\templates\adverts\properties_list.html:25
 msgid "Service type"
 msgstr "Tipo de servicio"
 
@@ -389,6 +389,14 @@ msgstr "Precio máximo."
 #: .\adverts\templates\adverts\properties_list.html:67
 msgid "Confirm"
 msgstr "Confirmar"
+
+#: .\adverts\templates\adverts\properties_list.html:73
+msgid "More filters"
+msgstr "Más filtros"
+
+#: .\adverts\templates\adverts\properties_list.html:106
+msgid "No property corresponds to your criteria "
+msgstr "Ninguna propiedad corresponde a sus criterios "
 
 #: .\adverts\templates\adverts\register.html:5
 msgid "Register"
